--- a/app/views/plans/_download_form.html.erb
+++ b/app/views/plans/_download_form.html.erb
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="form-control mb-3 col-sm-2">
       <%= select_tag :format, options_for_select(Settings::Template::VALID_FORMATS, :pdf),
-                     class: 'form-control', "aria-labelledby": "format" %>
+                     class: 'form-select', "aria-labelledby": "format" %>
     </div>
   </div>
 
@@ -17,7 +17,7 @@
     <% if @phase_options.length > 1 %>
       <div class="form-control mb-5">
         <%= label_tag(:phase_id, _("Select phase to download"), class: 'form-label') %>
-        <%= select_tag(:phase_id, options_for_select(@phase_options, @phase_options[0])) %>
+        <%= select_tag(:phase_id, options_for_select(@phase_options, @phase_options[0]), class: 'form-select') %>
       </div>
     <% else %>
       <%= hidden_field_tag(:phase_id, @phase_options[0][1]) %>
@@ -77,14 +77,14 @@
         <%= select_tag "export[formatting][font_face]",
             options_for_select(Settings::Template::VALID_FONT_FACES,
                                @export_settings.formatting[:font_face]),
-            class: 'form-control',
+            class: 'form-select',
             "data-default": @plan.template.settings(:export).formatting[:font_face] %>
       </div>
       <div class="form-control mb-3 px-2 col-sm-2">
         <%= label_tag "export[formatting][font_size]", _('Size') + " (pt)", class: 'form-label' %>
         <%= select_tag "export[formatting][font_size]",
             options_for_select(Settings::Template::VALID_FONT_SIZE_RANGE.to_a, @export_settings.formatting[:font_size]),
-            class: 'form-control',
+            class: 'form-select',
             "data-default": @plan.template.settings(:export).formatting[:font_size] %>
       </div>
 
@@ -94,7 +94,7 @@
         <%= select_tag "export[formatting][margin][top]",
             options_for_select(Settings::Template::VALID_MARGIN_RANGE.to_a,
                                @export_settings.formatting[:margin][:top]),
-            class: 'form-control',
+            class: 'form-select',
             "data-default": @plan.template.settings(:export).formatting[:margin][:top] %>
       </div>
       <div class="form-control mb-3 px-2 col-sm-1">
@@ -103,7 +103,7 @@
         <%= select_tag "export[formatting][margin][bottom]",
             options_for_select(Settings::Template::VALID_MARGIN_RANGE.to_a,
                                @export_settings.formatting[:margin][:bottom]),
-            class: 'form-control',
+            class: 'form-select',
             "data-default": @plan.template.settings(:export).formatting[:margin][:bottom] %>
       </div>
       <div class="form-control mb-3 px-2 col-sm-1">
@@ -112,7 +112,7 @@
         <%= select_tag "export[formatting][margin][left]",
             options_for_select(Settings::Template::VALID_MARGIN_RANGE.to_a,
                                @export_settings.formatting[:margin][:left]),
-            class: 'form-control',
+            class: 'form-select',
             "data-default": @plan.template.settings(:export).formatting[:margin][:left] %>
       </div>
       <div class="form-control mb-3 px-2 col-sm-1">
@@ -121,7 +121,7 @@
         <%= select_tag "export[formatting][margin][right]",
             options_for_select(Settings::Template::VALID_MARGIN_RANGE.to_a,
                                @export_settings.formatting[:margin][:right]),
-            class: 'form-control',
+            class: 'form-select',
             "data-default": @plan.template.settings(:export).formatting[:margin][:right] %>
       </div>
     </div>
