--- a/app/views/research_outputs/licenses/_form.html.erb
+++ b/app/views/research_outputs/licenses/_form.html.erb
@@ -16,7 +16,7 @@ show_preferred = selected.nil? || (selected != 0 && preferred_licenses.map { |ar
 options = show_preferred ? preferred_licenses : presenter.complete_licenses
 guidance = show_preferred ? preferred_guidance : default_guidance
 
-args = { include_blank: _("- Please select one -"), selected: selected, class: "form-control",
+args = { include_blank: _("- Please select one -"), selected: selected, class: "form-select",
          aria: { label: _('Initial license') } }
 args[:data] = { remote: true, url: plan_license_selection_path(research_output.plan), method: :get } if show_preferred
 %>
