Additional `form-control` to `form-select` changes
- This changes expand upon commit 87ddbb0ddb62073beadf3256115988d09e0a8b09

--- a/app/views/org_admin/questions/_form.html.erb
+++ b/app/views/org_admin/questions/_form.html.erb
@@ -32,7 +32,7 @@
           :title,
           question.question_format_id),
           {},
-          class: "form-control question_format",
+          class: "form-select question_format",
           'data-toggle': 'tooltip',
           'data-html': true,
           title: _("You can choose from:<ul><li>- text area (large box for paragraphs);</li> <li>- text field (for a short answer);</li> <li>- checkboxes where options are presented in a list and multiple values can be selected;</li> <li>- radio buttons where options are presented in a list but only one can be selected;</li> <li>- dropdown like this box - only one option can be selected;</li> <li>- multiple select box allows users to select several options from a scrollable list, using the CTRL key;</li></ul>")
