--- a/app/views/org_admin/templates/_form.html.erb
+++ b/app/views/org_admin/templates/_form.html.erb
@@ -11,6 +11,19 @@
   <%= f.text_area(:description, class: "template", spellcheck: true) %>
 </div>
 
+<% if Rails.configuration.x.research_fi.active %>
+  <div class="form-control mb-3">
+    <div class="row">
+      <div class="col-6">
+        <%= f.label(:api_server, _('Enable interoperation with an external system'), class: "form-label")%>
+        <%= select_tag :api_server_id, 
+          options_for_select(ApiServer.pluck(:title, :id), selected: f.object.api_server_id),
+          class: 'form-select', "aria-labelledby": "api_server_id", include_blank: _("--Select--")%>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <% if current_user.org.funder? && !current_user.org.funder_only? %>
   <!-- If the Org is a funder and another org type then allow then to set the visibility -->
   <div class="form-control mb-3 col-xs-8">
@@ -20,10 +33,7 @@
                          placement: 'right' }%>
     <div class="form-check">
       <%= f.label(:visibility) do %>
-        <%= f.check_box(:visibility,
-                        { checked: f.object.organisationally_visible? },
-                        f.object.class.visibilities[:organisationally_visible],
-                        f.object.class.visibilities[:publicly_visible]) %>
+        <%= f.check_box(:visibility, checked: f.object.visibility == 'organisationally_visible') %>
 
         <%= _('for internal %{org_name} use only') % { org_name: f.object.org.name } %>
       <% end %>
